// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> component its snapshot matches story Default 1`] = `
<div>
  <div
    class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
  >
    <div
      class="cds--form-item cds--checkbox-wrapper"
    >
      <input
        class="cds--checkbox"
        id="id"
        name="name"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="id"
      >
        <span
          class="cds--checkbox-label-text"
          dir="auto"
        >
          A label
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story OnFieldPanel 1`] = `
.c0 {
  background-color: #f4f4f4;
}

.c1 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c2 {
  font-weight: bold;
  margin-bottom: 1rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--layer-two c1"
    >
      <div
        class="c2"
      >
        A fieldpanel
      </div>
      <div
        class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
      >
        <div
          class="cds--form-item cds--checkbox-wrapper"
        >
          <input
            class="cds--checkbox"
            id="id"
            name="name"
            type="checkbox"
          />
          <label
            class="cds--checkbox-label"
            for="id"
          >
            <span
              class="cds--checkbox-label-text"
              dir="auto"
            >
              A label
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story TestOnForm 1`] = `
<div>
  <div>
    <div>
      <div>
        react-hook-form
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
          >
            <div
              class="cds--form-item cds--checkbox-wrapper"
            >
              <input
                class="cds--checkbox"
                id="id"
                name="field"
                type="checkbox"
              />
              <label
                class="cds--checkbox-label"
                for="id"
              >
                <span
                  class="cds--checkbox-label-text"
                  dir="auto"
                >
                  A label
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            true
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="formData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin-top: 2rem;"
    >
      <div>
        as standalone field
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
          >
            <div
              class="cds--form-item cds--checkbox-wrapper"
            >
              <input
                checked=""
                class="cds--checkbox"
                id="field2"
                type="checkbox"
              />
              <label
                class="cds--checkbox-label"
                for="field2"
              >
                <span
                  class="cds--checkbox-label-text"
                  dir="auto"
                />
              </label>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            true
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="sData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story WithError 1`] = `
.c0 {
  border: 2px solid #da1e28;
}

.c1 {
  color: #da1e28;
  font-size: 12px;
  line-height: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--form-item cds--checkbox-wrapper"
    >
      <input
        class="cds--checkbox"
        id="id"
        name="name"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="id"
      >
        <span
          class="cds--checkbox-label-text"
          dir="auto"
        >
          A label
        </span>
      </label>
    </div>
  </div>
  <div
    class="c1"
  >
    Some error text
  </div>
</div>
`;

exports[`<Checkbox /> component its snapshot matches story WithHelpText 1`] = `
.c0 {
  color: #525252;
  font-size: 12px;
  line-height: 16px;
  margin-top: 4px;
}

<div>
  <div
    class="Checkboxstyles__Checkbox-sc-1osmcwu-0"
  >
    <div
      class="cds--form-item cds--checkbox-wrapper"
    >
      <input
        class="cds--checkbox"
        id="id"
        name="name"
        type="checkbox"
      />
      <label
        class="cds--checkbox-label"
        for="id"
      >
        <span
          class="cds--checkbox-label-text"
          dir="auto"
        >
          A label
        </span>
      </label>
    </div>
  </div>
  <div
    class="c0"
  >
    Some help text
  </div>
</div>
`;
